--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,6 +34,13 @@ body::-webkit-scrollbar {
     background-color: white;
 }
 
+.show-hide-pwd {
+    cursor: pointer;
+    position: absolute;
+    right: 5px;
+    bottom: 9px;
+}
+
 #header {
     background: #fff;
 }
@@ -136,7 +143,7 @@ body.full-height #copyright {
     max-width: 650px;
     width: 100%;
     margin: auto;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.9);
     color: #4b4b4b;
     border-radius: 7px;
     position: relative;
@@ -147,7 +154,7 @@ body.full-height #copyright {
     height: 0;
     border-style: solid;
     border-width: 0 10px 12px 10px;
-    border-color: transparent transparent rgba(255, 255, 255, 0.7) transparent;
+    border-color: transparent transparent rgba(255, 255, 255, 0.9) transparent;
     content: "";
     top: -12px;
     position: absolute;
