--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,164 +1,144 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    background: #e8ebef;
+  font-family: "Montserrat", sans-serif;
+  background: #e8ebef;
 }
-
+body.full-height {
+  height: 100vh;
+  position: relative;
+}
+body.full-height #copyright {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
 body::-webkit-scrollbar-track {
-    background-color: white;
+  background-color: white;
 }
-
 body::-webkit-scrollbar-thumb {
-    border: 1px solid #B0BEC5;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background-color: #B0BEC5;
+  border: 1px solid #B0BEC5;
+  border-radius: 10px;
+  background-color: #B0BEC5;
 }
-
 body::-webkit-scrollbar-corner {
-    background-color: white;
+  background-color: white;
 }
-
 body::-webkit-scrollbar {
-    height: 7px;
-    width: 7px;
+  height: 7px;
+  width: 7px;
 }
-
 body::-webkit-scrollbar {
-    width: 10px;
-    background-color: white;
+  width: 10px;
+  background-color: white;
 }
 
 .show-hide-pwd {
-    cursor: pointer;
-    position: absolute;
-    right: 5px;
-    bottom: 9px;
+  cursor: pointer;
+  position: absolute;
+  right: 5px;
+  bottom: 9px;
+  color: #6f768e;
 }
 
 #header {
-    background: #fff;
+  background: #fff;
+}
+#header .header-logo {
+  max-width: 100%;
+  width: 100px;
+}
+#header .header-menu ul {
+  list-style: none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+#header .header-menu ul li {
+  font-size: 0;
+  display: inline-block;
+}
+#header .header-menu ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  padding: 15px 20px;
+  display: inline-block;
+  color: #434953;
+  font-weight: bold;
+  position: relative;
+}
+#header .header-menu ul li a:before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  margin: auto;
+  height: 2px;
+  background: #434953;
+  transition: all 0.3s ease;
+}
+#header .header-menu ul li a:hover:before {
+  width: 75%;
+}
+#header .header-menu ul.active a {
+  color: #2188C9;
 }
 
 #copyright {
-    background: #fff;
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.1);
-}
-
-#header .header-logo {
-    max-width: 100%;
-    width: 100px;
-}
-
-#header .header-menu ul {
-    list-style: none;
-    margin-bottom: 0;
-    padding-left: 0;
-}
-
-#header .header-menu ul li {
-    font-size: 0;
-    display: inline-block;
-}
-
-#header .header-menu ul li a {
-    text-decoration: none;
-    font-size: 16px;
-    padding: 15px 20px;
-    display: inline-block;
-    color: #434953;
-    font-weight: bold;
-    position: relative;
-}
-
-#header .header-menu li a:before {
-    content: " ";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 0;
-    margin: auto;
-    height: 2px;
-    background: #434953;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-}
-
-#header .header-menu li a:hover:before {
-    width: 75%;
-}
-
-#header .header-menu ul li.active a {
-    color: #2188C9;
+  background: #fff;
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.1);
 }
 
 #slide-home .swiper {
-    width: 100%;
-    height: auto;
-}
-
-#main-contents .list-notif {
-    list-style: none;
-    margin-bottom: 0;
-}
-
-#main-contents .list-notif img {
-    height: 16px;
-    width: 30px;
-}
-
-body.full-height {
-    height: 100vh;
-    position: relative;
-}
-
-body.full-height #copyright {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
-#auth-content {
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-image: url("/image/banner-top1.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
-    color: #fff;
+  width: 100%;
+  height: auto;
 }
 
 #main-contents .header-content img {
-    height: 50px;
+  height: 50px;
 }
-
+#main-contents .list-notif {
+  list-style: none;
+  margin-bottom: 0;
+}
+#main-contents .list-notif img {
+  height: 16px;
+  width: 30px;
+}
 #main-contents .box-content {
-    max-width: 650px;
-    width: 100%;
-    margin: auto;
-    background: rgba(255, 255, 255, 0.9);
-    color: #4b4b4b;
-    border-radius: 7px;
-    position: relative;
+  max-width: 650px;
+  width: 100%;
+  margin: auto;
+  background: rgba(255, 255, 255, 0.9);
+  color: #4b4b4b;
+  border-radius: 7px;
+  position: relative;
 }
-
 #main-contents .box-content:before {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 10px 12px 10px;
-    border-color: transparent transparent rgba(255, 255, 255, 0.9) transparent;
-    content: "";
-    top: -12px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 10px 12px 10px;
+  border-color: transparent transparent rgba(255, 255, 255, 0.9) transparent;
+  content: "";
+  top: -12px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+#main-contents #auth-content {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-image: url("/image/banner-top1.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
+  color: #fff;
 }
