--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -7,9 +7,11 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background: #e8ebef;
+
     &.full-height {
         height: 100vh;
         position: relative;
+
         #copyright {
             position: absolute;
             bottom: 0;
@@ -17,22 +19,27 @@ body {
             width: 100%;
         }
     }
+
     &::-webkit-scrollbar-track {
         background-color: white;
     }
+
     &::-webkit-scrollbar-thumb {
         border: 1px solid #B0BEC5;
         -webkit-border-radius: 10px;
         border-radius: 10px;
         background-color: #B0BEC5;
     }
+
     &::-webkit-scrollbar-corner {
         background-color: white;
     }
+
     &::-webkit-scrollbar {
         height: 7px;
         width: 7px;
     }
+
     &::-webkit-scrollbar {
         width: 10px;
         background-color: white;
@@ -45,6 +52,18 @@ body {
     right: 5px;
     bottom: 9px;
     color: #6f768e;
+}
+
+.error {
+    color: #a71d2a;
+    font-style: italic;
+    font-size: 14px;
+    margin-bottom: 0;
+
+    &:before {
+        content: '*';
+        margin-right: 3px;
+    }
 }
 
 #header {
@@ -66,14 +85,17 @@ body {
     .header-content img {
         height: 50px;
     }
+
     .list-notif {
         list-style: none;
         margin-bottom: 0;
+
         img {
             height: 16px;
             width: 30px;
         }
     }
+
     .box-content {
         max-width: 650px;
         width: 100%;
@@ -82,6 +104,8 @@ body {
         color: #4b4b4b;
         border-radius: 7px;
         position: relative;
+        box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.2);
+
         &:before {
             width: 0;
             height: 0;
@@ -96,6 +120,7 @@ body {
             margin: auto;
         }
     }
+
     #auth-content {
         text-align: center;
         padding-top: 10px;
