--- a/resources/css/header.scss
+++ b/resources/css/header.scss
@@ -94,6 +94,10 @@
                         font-weight: bold;
                     }
                 }
+
+                li.active a {
+                    font-weight: bold;
+                }
             }
         }
     }
