Thanh toan hoa don

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -307,3 +307,36 @@ input[type=radio]:checked ~ .checkbox-custom {
 .cursor-nomal {
   cursor: default;
 }
+
+.area-bill .icon {
+  height: 6em;
+  width: 6em;
+  margin: auto;
+  background: var(--background) no-repeat top center;
+  background-size: 6em 12em;
+}
+.area-bill ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.area-bill ul a {
+  width: 180px;
+  height: 150px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 7px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  transition: all 0.2s;
+  margin: 10px;
+  position: relative;
+}
+.area-bill ul a:hover {
+  box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.2);
+  border-color: transparent;
+}
+.area-bill ul a:hover .checkbox-custom {
+  transform: scale(1);
+}
