--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,6 +70,10 @@ body.full-height #copyright {
   background-color: #f8d7da !important;
 }
 
+.font-size-15 {
+  font-size: 15px;
+}
+
 #header {
   background: #fff;
   position: fixed;
@@ -355,4 +359,23 @@ input[type=radio]:checked ~ .checkbox-custom {
   width: 0;
   left: 0;
   top: 0;
+}
+
+#bottom_menu {
+  background: #0c2c63;
+}
+#bottom_menu a {
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  transition: all 0.2s;
+}
+#bottom_menu a:hover {
+  color: #0c2c63;
+  background: #95acd5;
+  font-weight: bold;
 }
