--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -82,6 +82,10 @@ body {
     background-color: #f8d7da !important;
 }
 
+.font-size-15 {
+    font-size: 15px;
+}
+
 #header {
     background: #fff;
     position: fixed;
@@ -307,5 +311,26 @@ input[type="radio"]:checked ~ .checkbox-custom {
         width: 0;
         left: 0;
         top: 0;
+    }
+}
+
+#bottom_menu {
+    background: #0c2c63;
+
+    a {
+        width: 100%;
+        height: 60px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        transition: all .2s;
+
+        &:hover{
+            color: #0c2c63;
+            background: #95acd5;
+            font-weight: bold;
+        }
     }
 }
