--- a/public/css/app.css
+++ b/public/css/app.css
@@ -180,6 +180,7 @@ body.full-height #copyright {
 #slide-home .swiper {
   width: 100%;
   height: auto;
+  max-height: 75vh;
 }
 
 #main-contents {
