--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background: #e8ebef;
+    //background: #e8ebef;
 
     &.full-height {
         height: 100vh;
