--- a/public/css/app.css
+++ b/public/css/app.css
@@ -453,3 +453,11 @@ input[type=number] {
 .button-plus {
   right: 0;
 }
+
+[data-for] {
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  cursor: pointer;
+}
