--- a/public/css/app.css
+++ b/public/css/app.css
@@ -461,3 +461,17 @@ input[type=number] {
   -webkit-user-select: none;
   cursor: pointer;
 }
+
+@media (max-width: 575px) {
+  .type_buy_response {
+    flex-direction: column;
+  }
+  .type_buy_response label {
+    width: calc(100% - 1rem) !important;
+  }
+  .type_buy_response [data-for] {
+    width: calc(100% - 1rem) !important;
+    margin-left: 0 !important;
+    margin-top: 5px !important;
+  }
+}
