--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -51,7 +51,7 @@ body {
 .alertify {
     .ajs-header,
     .ajs-body,
-    .ajs-footer{
+    .ajs-footer {
         font-family: 'Montserrat', sans-serif !important;
     }
 }
@@ -287,7 +287,7 @@ input[type="radio"]:checked ~ .checkbox-custom {
             margin: 10px;
             position: relative;
 
-            &:hover{
+            &:hover {
                 box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.2);
                 border-color: transparent;
 
@@ -326,7 +326,7 @@ input[type="radio"]:checked ~ .checkbox-custom {
         display: inline-table;
         transition: all .2s;
 
-        &:hover{
+        &:hover {
             color: #0c2c63;
             background: #95acd5;
             font-weight: bold;
@@ -434,5 +434,30 @@ input[type="number"] {
             margin-left: 0 !important;
             margin-top: 5px !important;
         }
+    }
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin-top: 3px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
