--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -461,3 +461,100 @@ input[type="number"] {
         transform: rotate(360deg);
     }
 }
+
+$white: #dbdbdb;
+$mid: #537bde;
+$light: #a2eaa7;
+$dark: #0a2f0c;
+$speed: .3s;
+$toggle-indicator-size: 24px;
+$track-height: $toggle-indicator-size + 6;
+$track-width: $toggle-indicator-size * 2.5;
+$highContrastModeSupport: solid 2px transparent;
+$track-border: $mid;
+$track-background: $light;
+$focus-ring: 0px 0px 0px 2px $dark;
+
+.toggle {
+    align-items: center;
+    border-radius: 100px;
+    display: flex;
+    font-weight: 700;
+    margin-bottom: 16px;
+
+    &:last-of-type {
+        margin: 0;
+    }
+}
+
+.toggle__input {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+
+    &:disabled + .toggle-track {
+        cursor: not-allowed;
+        opacity: 0.7;
+    }
+}
+
+.toggle-track {
+    background: $track-background;
+    border: 1px solid $track-border;
+    border-radius: 100px;
+    cursor: pointer;
+    display: flex;
+    height: $track-height;
+    margin-right: 12px;
+    position: relative;
+    width: $track-width;
+}
+
+.toggle-indicator {
+    align-items: center;
+    background: $dark;
+    border-radius: $toggle-indicator-size;
+    bottom: 2px;
+    display: flex;
+    height: $toggle-indicator-size;
+    justify-content: center;
+    left: 2px;
+    outline: $highContrastModeSupport;
+    position: absolute;
+    transition: $speed;
+    width: $toggle-indicator-size;
+}
+
+.checkMark {
+    fill: #fff;
+    height: $toggle-indicator-size - 4;
+    width: $toggle-indicator-size - 4;
+    opacity: 0;
+    transition: opacity $speed ease-in-out;
+    position: relative;
+    top: -2px;
+}
+
+.toggle__input:not(:checked) + .toggle-track {
+    background: $white;
+}
+
+.toggle__input:checked + .toggle-track .toggle-indicator {
+    background: #3c3c3c;
+    transform: translateX($track-width - $track-height);
+
+    .checkMark {
+        opacity: 1;
+        transition: opacity $speed ease-in-out;
+    }
+}
+
+@media screen and (-ms-high-contrast: active) {
+    .toggle-track {
+        border-radius: 0;
+    }
+}
