--- a/public/_admin_/css/codebase.css
+++ b/public/_admin_/css/codebase.css
@@ -24623,3 +24623,8 @@ div.tagsinput span.tag a:hover {
         border-radius: 0;
     }
 }
+
+#content_notification_new {
+    max-height: 250px;
+    overflow: hidden auto;
+}
