--- a/public/_admin_/css/codebase.css
+++ b/public/_admin_/css/codebase.css
@@ -24629,3 +24629,27 @@ div.tagsinput span.tag a:hover {
     max-height: 250px;
     overflow: hidden auto;
 }
+
+.box-list-notif {
+    max-height: 550px;
+    overflow: hidden auto;
+}
+
+.box-list-notif .notif {
+    padding: 7px 22px;
+    box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.1);
+    margin: 10px 0;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    cursor: grab;
+    border-radius: 4px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    word-break: break-all;
+}
