--- a/resources/css/header.scss
+++ b/resources/css/header.scss
@@ -13,51 +13,59 @@
     max-height: 80px;
 }
 
-.header-menu ul {
-    list-style: none;
-    margin-bottom: 0;
-    padding-left: 0;
+.header-menu {
+    padding: 2px 0;
 
-    li {
-        font-size: 0;
-        display: inline-block;
+    ul {
+        list-style: none;
+        margin-bottom: 0;
+        padding-left: 0;
+        display: flex;
+        align-items: center;
 
-        a {
-            text-decoration: none;
-            font-size: 16px;
-            padding: 8px 14px;
+        li {
+            font-size: 0;
             display: inline-block;
-            color: #434953;
-            font-weight: bold;
-            position: relative;
+            max-width: 120px;
+            text-align: center;
 
-            &:before {
-                content: " ";
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                right: 0;
-                width: 0;
-                margin: auto;
-                height: 2px;
-                background: #434953;
-                -webkit-transition: all .3s ease;
-                transition: all .3s ease;
+            a {
+                text-decoration: none;
+                font-size: 16px;
+                padding: 8px 14px;
+                display: inline-block;
+                color: #434953;
+                font-weight: bold;
+                position: relative;
+
+                &:before {
+                    content: " ";
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    right: 0;
+                    width: 0;
+                    margin: auto;
+                    height: 2px;
+                    background: #434953;
+                    -webkit-transition: all .3s ease;
+                    transition: all .3s ease;
+                }
+
+                &:hover:before {
+                    width: 75%;
+                }
+
+                &.dropdown-item.active {
+                    color: #fff;
+                }
             }
 
-            &:hover:before {
-                width: 75%;
+            &.active a:not(.dropdown-item) {
+                color: #2188C9;
+                box-shadow: 0 0 4px 1px;
+                border-radius: 15px;
             }
-
-            &.dropdown-item.active {
-                color: #fff;
-            }
-        }
-
-        &.active a:not(.dropdown-item) {
-            color: #2188C9;
-            box-shadow: 0 0 4px 1px;
-            border-radius: 15px;
         }
     }
 }
