--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -56,6 +56,25 @@ body {
     }
 }
 
+$colors: (
+    "red":red,
+    "white":white,
+    "yellow":#856404
+);
+
+@each $name, $color in $colors {
+    .color-#{$name} {
+        color: $color;
+    }
+}
+
+@each $name, $color in $colors {
+    .color-#{$name}-bold {
+        color: $color;
+        font-weight: bold;
+    }
+}
+
 .show-hide-pwd {
     cursor: pointer;
     position: absolute;
